# camelforth-rp2040-b-MS-U

./: .gitignore  README.md  n.READY.FOR.RELEASE
17-camelforth-a.d/pico-examples/camelforth-a/: camelforth-a.c
17-camelforth-a.d/pico-examples/camelforth-a/forth/: forth.c
17-camelforth-b.d/: .gitignore
17-camelforth-b.d/CONDX/: conditions.txt
17-camelforth-b.d/doc/: ideas.txt
17-camelforth-b.d/pico-examples/: CMakeLists.txt
17-camelforth-b.d/pico-examples/camelforth-a/: CMakeLists.txt
17-camelforth-b.d/pico-examples/camelforth-b/: .gitignore  CMakeLists.txt  CMakeLists.txt--COPY_TO_RAM_22  CMakeLists.txt--NO_FLASH_  NOTE.md  camelforth-a.c  camelforth-b.c
17-camelforth-b.d/pico-examples/camelforth-b/asm/: .gitignore  CMakeLists.txt  README.md  asmword.S  asmword.c  config.S
17-camelforth-b.d/pico-examples/camelforth-b/asm/rev_00.d/: config.S
17-camelforth-b.d/pico-examples/camelforth-b/asm/t/: asmword.c
17-camelforth-b.d/pico-examples/camelforth-b/forth/: CMakeLists.txt  cut.inc  dump.inc  forth.c  forth.h  pico-hardware-camelforth.h  rp2040_flash_ops.inc  rp2040_pico.inc  rp2040_pico_getkey_usb.inc  rp2040_reading.inc
17-camelforth-b.d/pico-examples/camelforth-b/include/: .gitignore  CMakeLists.txt  feather.h  forth_defines.h  itsy.h  pico-hardware-camelforth.h  pico2040.h  qtpy.h  tiny2040.h
17-camelforth-b.d/pico-examples/camelforth-b/pico-hw/pico-LED/: CMakeLists.txt  pico-LED.c  pico-LED.c__with_adafruit_rp2040_choice_  pico-LED.h  pico-LED.h__rescind__
17-camelforth-b.d/pico-examples/camelforth-b/pio/: CMakeLists.txt
17-camelforth-b.d/pico-examples/camelforth-b/pio/ws2812/: .gitignore  CMakeLists.txt  pico-RGB.c  ws2812.c
doc/: current_environment.fs  itsy_current_environment.fs
doc/0-usb_enum.d/: CMakeLists.txt  WHAT.THIS.IS  camelforth-b.c
pre-built-uf2.d/: .gitignore  camelforth-b.uf2  camelforth-b.uf2.md5.txt  update.sh
pre-built-uf2.d/0-COPY_TO_RAM.d/: camelforth-b--08-mar-182851-3aa7029-copy_to_ram.uf2  camelforth-b--08-mar-182851-3aa7029-copy_to_ram.uf2.md5.txt
pre-built-uf2.d/0-NO_FLASH.d/: camelforth-b--08-mar-182851-3aa7029-no_flash.uf2  camelforth-b--08-mar-182851-3aa7029-no_flash.uf2.md5.txt
pre-built-uf2.d/1-Feather_COPY_TO_RAM.d/: camelforth-b.uf2  camelforth-b.uf2.md5.txt  listing.txt
pre-built-uf2.d/2-Feather_TEST_NOW.d/: camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/3-QTPy_COPY_TO_RAM_UNSTABLE.d/: NOTES.QTPY.txt  camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/3-QTPy_COPY_TO_RAM_UNSTABLE.d/rev-b.d/: WHAT.THIS.IS  camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/3-QTPy_COPY_TO_RAM_UNSTABLE.d/rev-c.d/: camelforth-b.uf2  camelforth-b.uf2.md5.txt  fixes.txt
pre-built-uf2.d/4-ItsyBitsy_RP2040_COPY_TO_RAM.d/: camelforth-b--12-may-211808-1f700c1-copy_to_ram.uf2  camelforth-b--12-may-211808-1f700c1-copy_to_ram.uf2.md5.txt
pre-built-uf2.d/4-flash_timing-bug-a.d/1-qtpy.d/: TESTED.GOOD  camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/4-flash_timing-bug-a.d/2-itsy.d/: TESTED.GOOD  camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/4-flash_timing-bug-a.d/3-feather.d/: TESTED.NOMINAL  camelforth-b.uf2  camelforth-b.uf2.md5.txt
pre-built-uf2.d/4-flash_timing-bug-a.d/4-pico.d/: TESTED.GOOD  camelforth-b.uf2  camelforth-b.uf2.md5.txt
